# flask_template

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  cli_cmds.py  config.py  db.py  db.sqlite  flask_template_db.sqlite  pyproject.toml  requirements-dsv.txt  requirements-prd.txt  requirements.txt  seed.py
auth/: loaders.py
controller/: account.py  wraps.py
controllers/: account.py
forms/: AuthForm.py  LoginForm.py
help/: validators.py
middleware/: wraps.py
migrations/versions/: f445ee26fd38_init.py
models/: User.py
routes/: account.py  admin.py  public.py
seeds/: users.json
static/css/: style.css
static/js/: app.js
templates/: base.html  base.jinja2  forgot_password.jinja2  index.html  index.jinja2  sign_in.jinja2  sign_up.jinja2
templates/account/: change_password.jinja2  delete.jinja2  forgot_password.jinja2  home.html  home.jinja2  profile.html  profile.jinja2  sign_in.html  sign_in.jinja2  sign_up.html  sign_up.jinja2
templates/admin/: panel.jinja2
templates/error/: 404.jinja2
tests/: describe_routes.py  mockUsers.py  test_admin.py  test_app.py  test_routes.py  test_signin.py  test_signup.py
